adding states to fix broken update

--- a/hexagons/index.html
+++ b/hexagons/index.html
@@ -11,6 +11,7 @@
 	<script src="phaser.min.js"></script>
    <script src = "game.js"></script>
 	 <script type="text/javascript" src="Hexagon.js"></script>
+	 <script type="text/javascript" src="SnowStorm.js"></script>
 	</head>
 	<body>
 	</body>
