--- a/hexagons2/index.html
+++ b/hexagons2/index.html
@@ -9,7 +9,9 @@
 		}
 	</style>
 	<script src="phaser.min.js"></script>
-     <script src = "game.js"></script>
+  <script src = "game.js"></script>
+	<script src = "Hexagon.js"></script>
+	<script src = "SnowStorm.js"></script>
 	</head>
 	<body>
 	</body>
