generator code works

--- a/hexagons/index.html
+++ b/hexagons/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 	<style type="text/css">
-		body{
-			background: #000000;
-			padding:0px;
-			margin:0px;
-		}
+	body{
+		background: #000000;
+		padding:0px;
+		margin:0px;
+	}
 	</style>
 	<script src="phaser.min.js"></script>
-   <script src = "game.js"></script>
-	 <script type="text/javascript" src="Hexagon.js"></script>
-	 <script type="text/javascript" src="SnowStorm.js"></script>
-	</head>
-	<body>
-	</body>
+	<script src = "game.js"></script>
+	<script src = "Hexagon.js"></script>
+</head>
+<body>
+</body>
 </html>
