--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	</style>
 	<script src="phaser.min.js"></script>
 	<script src = "game.js"></script>
-	<script src = "Hexagon.js"></script>
+	<script src = "prefabs/Hexagon.js"></script>
+	<script src = "prefabs/Npc.js"></script>
 </head>
 <body>
 </body>
