--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<script src = "game.js"></script>
 	<script src = "prefabs/Hexagon.js"></script>
 	<script src = "prefabs/Npc.js"></script>
+	<script src = "prefabs/Encounter.js"></script>
+	<script src = "prefabs/Quest.js"></script>
 </head>
 <body>
 </body>
