--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src = "prefabs/Npc.js"></script>
 	<script src = "prefabs/Encounter.js"></script>
 	<script src = "prefabs/Quest.js"></script>
+	<script src = "prefabs/Faction.js"></script>
 </head>
 <body>
 </body>
