added location prefab

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src = "prefabs/Encounter.js"></script>
 	<script src = "prefabs/Quest.js"></script>
 	<script src = "prefabs/Faction.js"></script>
+	<script src = "prefabs/Location.js"></script>
 </head>
 <body>
 </body>
