--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	}
 	</style>
 	<script src="phaser.min.js"></script>
-	<script src = "game2.js"></script>
+	<script src = "game.js"></script>
 	<script src = "prefabs/Hexagon.js"></script>
 	<script src = "prefabs/Npc.js"></script>
 	<script src = "prefabs/Encounter.js"></script>
