adding NPC friendliness to detail page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<a href="#" class="w3-bar-item w3-button w3-deep-orange" onclick="location.reload(true)"><i class="fa fa-refresh"></i></a>
 		<a href="#" class="w3-bar-item w3-button" onclick="loadJS('game.js');">World Map</a>
 		<a href="#" class="w3-bar-item w3-button" onclick="loadJS('game2.js');">Quest Tracker</a>
+		<a href="https://github.com/dacharya64/PhaserHexMap/" target="_blank" class="w3-bar-item w3-button">About/How To</a>
 	</div>
 	<!-- Target div for Phaser-created <canvas> -->
 	<div id="phaser">
